Perform a simple EDA in R

--- a/notebooks/project_notebook.ipynb
+++ b/notebooks/project_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "young-thousand",
+   "id": "challenging-shore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,8 +19,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "forty-companion",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jupyter Lab cell extensions\n",
+    "%load_ext rpy2.ipython \n",
+    "%load_ext memory_profiler "
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "viral-solution",
+   "id": "corporate-order",
    "metadata": {},
    "source": [
     "## 3. Downloading the data"
@@ -29,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "scientific-final",
+   "id": "technical-mainland",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "liquid-fossil",
+   "id": "considered-leadership",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "sorted-future",
+   "id": "nervous-happiness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "prospective-coupon",
+   "id": "hydraulic-anniversary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cutting-parish",
+   "id": "surgical-palestinian",
    "metadata": {},
    "source": [
     "## 4. Combining data CSVs"
@@ -134,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "handmade-hurricane",
+   "id": "restricted-aircraft",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "duplicate-catering",
+   "id": "minimal-retailer",
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acoustic-agenda",
+   "id": "supported-campaign",
    "metadata": {},
    "source": [
     "## 5. Load the combined CSV to memory and perform a simple EDA"
@@ -181,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "every-pastor",
+   "id": "multiple-organization",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "conventional-injection",
+   "id": "advised-yorkshire",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "existing-patient",
+   "id": "considered-evaluation",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "encouraging-impression",
+   "id": "infinite-external",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "described-bunny",
+   "id": "incomplete-cotton",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "powerful-celtic",
+   "id": "joined-percentage",
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +438,152 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "knowing-attribute",
+   "metadata": {},
+   "source": [
+    "## 6. Perform a simple EDA in R\n",
+    "\n",
+    "Pick an approach to transfer the dataframe from python to R.\n",
+    "* Parquet file\n",
+    "* Feather file (We chose this one)\n",
+    "* Pandas exchange\n",
+    "* Arrow exchange"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "virtual-recording",
+   "metadata": {},
+   "source": [
+    "### Reason to choose **feather**\n",
+    "\n",
+    "The team referred to lecture notes and online resources to compare the four approaches above and determined to choose ** Feather** at the end as the best practice. The reasons are listed as follows,\n",
+    "\n",
+    "- **Feather** is faster than `parquet file` and `arrow exchange` when writing files since it store the data with lesser serialization and deserialization, leading to a higher I/O speed.\n",
+    "- `parquet file` has the advantages of saving storage memory. However, it is more appropriate to choose **Feather** as this use case requests a faster speed than data storage.\n",
+    "- **Feather** fits well with the R programming language since the API is embedded well for reading and writing data using R.\n",
+    "- Team researched online articles to compare those four approaches according to experiments and benchmarking results. The team concluded **Feather** is the ideal choice. \n",
+    "- **Feather** works well among Jupyter notebook sessions. It also speeds up the data queries without taking much memory on the disk, and there is no need for any unpacking when loaded the data back into RAM."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "marked-clause",
+   "metadata": {},
+   "source": [
+    "### 6.1 Use Feather to transfer the dataframe from Python to R "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "novel-style",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyarrow.dataset as ds\n",
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq\n",
+    "import rpy2.rinterface\n",
+    "import rpy2_arrow.pyarrow_rarrow as pyra\n",
+    "import pyarrow.feather as feather"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "continuous-explanation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "library(arrow)\n",
+    "library(dplyr)\n",
+    "library(tidyr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "invalid-three",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "dataset = ds.dataset(\"figsharedailyrain/combined_data.csv\", format=\"csv\")\n",
+    "table = dataset.to_table()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "compound-health",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# Write in feather format\n",
+    "feather.write_feather(table, 'figsharedailyrain/combined_data.feather')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "psychological-capacity",
+   "metadata": {},
+   "source": [
+    "### 6.2 Perform a simple EDA in R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "persistent-sweet",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "%%R\n",
+    "\n",
+    "# Calculate how much time it took to read a feather file\n",
+    "start_time <- Sys.time()\n",
+    "r_table <- arrow::read_feather(\"figsharedailyrain/combined_data.feather\")\n",
+    "print(class(r_table))\n",
+    "\n",
+    "# Print the different counts of the models \n",
+    "result <- r_table %>% count(model) \n",
+    "end_time <- Sys.time()\n",
+    "\n",
+    "print(end_time - start_time)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "possible-captain",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%R\n",
+    "\n",
+    "# Print the different counts of the time\n",
+    "result <- r_table %>% count(time) \n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pointed-charger",
+   "metadata": {},
+   "source": [
+    "### Discussion\n",
+    "\n",
+    "TODO"
    ]
   }
  ],
