Correct a typo in section 6

--- a/notebooks/project_notebook.ipynb
+++ b/notebooks/project_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "challenging-shore",
+   "id": "packed-thesis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "forty-companion",
+   "id": "local-penalty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "corporate-order",
+   "id": "loose-research",
    "metadata": {},
    "source": [
     "## 3. Downloading the data"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "technical-mainland",
+   "id": "polar-adaptation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "considered-leadership",
+   "id": "suburban-fault",
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "nervous-happiness",
+   "id": "corresponding-cardiff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "hydraulic-anniversary",
+   "id": "silent-bermuda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surgical-palestinian",
+   "id": "alpine-british",
    "metadata": {},
    "source": [
     "## 4. Combining data CSVs"
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "restricted-aircraft",
+   "id": "excellent-anderson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "minimal-retailer",
+   "id": "stuck-indication",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supported-campaign",
+   "id": "exceptional-transcript",
    "metadata": {},
    "source": [
     "## 5. Load the combined CSV to memory and perform a simple EDA"
@@ -193,7 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "multiple-organization",
+   "id": "offshore-dragon",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "advised-yorkshire",
+   "id": "accessory-forestry",
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "considered-evaluation",
+   "id": "stretch-preserve",
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "infinite-external",
+   "id": "taken-senate",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "incomplete-cotton",
+   "id": "incorporated-logistics",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "joined-percentage",
+   "id": "duplicate-messaging",
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "knowing-attribute",
+   "id": "prescription-church",
    "metadata": {},
    "source": [
     "## 6. Perform a simple EDA in R\n",
@@ -456,12 +456,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "virtual-recording",
+   "id": "assisted-miller",
    "metadata": {},
    "source": [
-    "### Reason to choose **feather**\n",
+    "### Reasons to choose **feather**\n",
     "\n",
-    "The team referred to lecture notes and online resources to compare the four approaches above and determined to choose ** Feather** at the end as the best practice. The reasons are listed as follows,\n",
+    "The team referred to lecture notes and online resources to compare the four approaches above and determined to choose **Feather** at the end as the best practice. The reasons are listed as follows,\n",
     "\n",
     "- **Feather** is faster than `parquet file` and `arrow exchange` when writing files since it store the data with lesser serialization and deserialization, leading to a higher I/O speed.\n",
     "- `parquet file` has the advantages of saving storage memory. However, it is more appropriate to choose **Feather** as this use case requests a faster speed than data storage.\n",
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marked-clause",
+   "id": "standing-accent",
    "metadata": {},
    "source": [
     "### 6.1 Use Feather to transfer the dataframe from Python to R "
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "novel-style",
+   "id": "czech-flashing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "continuous-explanation",
+   "id": "maritime-latest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "invalid-three",
+   "id": "framed-audit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compound-health",
+   "id": "featured-board",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "psychological-capacity",
+   "id": "basic-carry",
    "metadata": {},
    "source": [
     "### 6.2 Perform a simple EDA in R"
@@ -542,7 +542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "persistent-sweet",
+   "id": "finished-driving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "possible-captain",
+   "id": "several-effectiveness",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pointed-charger",
+   "id": "freelance-banks",
    "metadata": {},
    "source": [
     "### Discussion\n",
