--- a/notebooks/project_notebook.ipynb
+++ b/notebooks/project_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "packed-thesis",
+   "id": "danish-trail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,14 @@
     "from urllib.request import urlretrieve\n",
     "import json\n",
     "import pandas as pd\n",
+    "import dask.dataframe as dd\n",
     "from memory_profiler import memory_usage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "local-penalty",
+   "execution_count": 2,
+   "id": "union-amplifier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loose-research",
+   "id": "unnecessary-answer",
    "metadata": {},
    "source": [
     "## 3. Downloading the data"
@@ -40,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "polar-adaptation",
+   "execution_count": 3,
+   "id": "indoor-ratio",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "suburban-fault",
+   "execution_count": 4,
+   "id": "confused-london",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +99,7 @@
        "  'size': 4113}]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,8 +113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "corresponding-cardiff",
+   "execution_count": 5,
+   "id": "trying-gilbert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,8 +127,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "silent-bermuda",
+   "execution_count": 6,
+   "id": "palestinian-import",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alpine-british",
+   "id": "composed-surname",
    "metadata": {},
    "source": [
     "## 4. Combining data CSVs"
@@ -145,10 +146,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "excellent-anderson",
+   "execution_count": 7,
+   "id": "convenient-congress",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The memory_profiler extension is already loaded. To reload it, use:\n",
+      "  %reload_ext memory_profiler\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext memory_profiler"
    ]
@@ -156,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "stuck-indication",
+   "id": "protecting-peninsula",
    "metadata": {},
    "outputs": [
     {
@@ -183,266 +193,191 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "annual-fairy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peak memory: 152.25 MiB, increment: 0.12 MiB\n",
+      "CPU times: user 9min 6s, sys: 16 s, total: 9min 22s\n",
+      "Wall time: 9min 26s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%memit\n",
+    "#Chirag's computer (Linux OS)\n",
+    "use_cols = [\"time\", \"lat_min\", \"lat_max\", \"lon_min\", \"lon_max\", \"rain (mm/day)\"]\n",
+    "files = glob.glob('figsharedailyrain/*.csv')\n",
+    "files[:] = [x for x in files if \"observed\" not in x]\n",
+    "df = pd.DataFrame(columns=use_cols)\n",
+    "df = pd.concat((pd.read_csv(file, index_col=0, usecols=use_cols)\n",
+    "                .assign(model=re.findall(r'[^\\/|\\\\]+(?=\\.)', file.replace('_daily_rainfall_NSW', ''))[0])\n",
+    "                for file in files)\n",
+    "              )  \n",
+    "df.to_csv(\"figsharedailyrain/combined_data.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "exceptional-transcript",
+   "id": "illegal-bench",
    "metadata": {},
    "source": [
     "## 5. Load the combined CSV to memory and perform a simple EDA"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "hidden-universal",
+   "metadata": {},
+   "source": [
+    "### 5.1.1 Loading in chunks"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "offshore-dragon",
+   "execution_count": 7,
+   "id": "enclosed-perfume",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.7G\tfigsharedailyrain/combined_data.csv\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%sh\n",
-    "du -sh figsharedailyrain/combined_data.csv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "accessory-forestry",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 1min 1s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "df = pd.read_csv(\"figsharedailyrain/combined_data.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "stretch-preserve",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(62467843, 7)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(df.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "taken-senate",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>time</th>\n",
-       "      <th>lat_min</th>\n",
-       "      <th>lat_max</th>\n",
-       "      <th>lon_min</th>\n",
-       "      <th>lon_max</th>\n",
-       "      <th>rain (mm/day)</th>\n",
-       "      <th>model</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1889-01-01 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>3.293256e-13</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1889-01-02 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1889-01-03 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1889-01-04 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1889-01-05 12:00:00</td>\n",
-       "      <td>-36.25</td>\n",
-       "      <td>-35.0</td>\n",
-       "      <td>140.625</td>\n",
-       "      <td>142.5</td>\n",
-       "      <td>1.047658e-02</td>\n",
-       "      <td>ACCESS-CM2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  time  lat_min  lat_max  lon_min  lon_max  rain (mm/day)  \\\n",
-       "0  1889-01-01 12:00:00   -36.25    -35.0  140.625    142.5   3.293256e-13   \n",
-       "1  1889-01-02 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
-       "2  1889-01-03 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
-       "3  1889-01-04 12:00:00   -36.25    -35.0  140.625    142.5   0.000000e+00   \n",
-       "4  1889-01-05 12:00:00   -36.25    -35.0  140.625    142.5   1.047658e-02   \n",
-       "\n",
-       "        model  \n",
-       "0  ACCESS-CM2  \n",
-       "1  ACCESS-CM2  \n",
-       "2  ACCESS-CM2  \n",
-       "3  ACCESS-CM2  \n",
-       "4  ACCESS-CM2  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "incorporated-logistics",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MPI-ESM1-2-HR       5154240\n",
-      "CMCC-CM2-HR4        3541230\n",
-      "CMCC-CM2-SR5        3541230\n",
-      "CMCC-ESM2           3541230\n",
-      "NorESM2-MM          3541230\n",
-      "TaiESM1             3541230\n",
-      "SAM0-UNICON         3541153\n",
-      "FGOALS-f3-L         3219300\n",
-      "GFDL-ESM4           3219300\n",
-      "GFDL-CM4            3219300\n",
-      "MRI-ESM2-0          3037320\n",
-      "EC-Earth3-Veg-LR    3037320\n",
-      "BCC-CSM2-MR         3035340\n",
-      "MIROC6              2070900\n",
-      "ACCESS-CM2          1932840\n",
-      "ACCESS-ESM1-5       1610700\n",
-      "INM-CM4-8           1609650\n",
-      "INM-CM5-0           1609650\n",
-      "KIOST-ESM           1287720\n",
-      "FGOALS-g3           1287720\n",
-      "MPI-ESM1-2-LR        966420\n",
-      "AWI-ESM-1-1-LR       966420\n",
-      "MPI-ESM-1-2-HAM      966420\n",
-      "NESM3                966420\n",
-      "NorESM2-LM           919800\n",
-      "BCC-ESM1             551880\n",
-      "CanESM5              551880\n",
-      "Name: model, dtype: int64\n",
-      "Wall time: 4.48 s\n"
+      "ACCESS-CM2           1932840\n",
+      "ACCESS-ESM1-5        1610700\n",
+      "AWI-ESM-1-1-LR        966420\n",
+      "BCC-CSM2-MR          3035340\n",
+      "BCC-ESM1              551880\n",
+      "CMCC-CM2-HR4         3541230\n",
+      "CMCC-CM2-SR5         3541230\n",
+      "CMCC-ESM2            3541230\n",
+      "CanESM5               551880\n",
+      "EC-Earth3-Veg-LR     3037320\n",
+      "FGOALS-f3-L          3219300\n",
+      "FGOALS-g3            1287720\n",
+      "GFDL-CM4             3219300\n",
+      "GFDL-ESM4            3219300\n",
+      "INM-CM4-8            1609650\n",
+      "INM-CM5-0            1609650\n",
+      "KIOST-ESM            1287720\n",
+      "MIROC6               2070900\n",
+      "MPI-ESM-1-2-HAM       966420\n",
+      "MPI-ESM1-2-HR        5154240\n",
+      "MPI-ESM1-2-LR         966420\n",
+      "MRI-ESM2-0           3037320\n",
+      "NESM3                 966420\n",
+      "NorESM2-LM            919800\n",
+      "NorESM2-MM           3541230\n",
+      "SAM0-UNICON          3541153\n",
+      "TaiESM1              3541230\n",
+      "combined_data       54385075\n",
+      "dtype: int64\n",
+      "peak memory: 9137.07 MiB, increment: 1455.77 MiB\n",
+      "CPU times: user 1min 35s, sys: 7.34 s, total: 1min 42s\n",
+      "Wall time: 1min 45s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "print(df[\"model\"].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "duplicate-messaging",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 62467843 entries, 0 to 62467842\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column         Dtype  \n",
-      "---  ------         -----  \n",
-      " 0   time           object \n",
-      " 1   lat_min        float64\n",
-      " 2   lat_max        float64\n",
-      " 3   lon_min        float64\n",
-      " 4   lon_max        float64\n",
-      " 5   rain (mm/day)  float64\n",
-      " 6   model          object \n",
-      "dtypes: float64(5), object(2)\n",
-      "memory usage: 3.3+ GB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
+    "%%memit\n",
+    "counts = pd.Series(dtype=int)\n",
+    "for chunk in pd.read_csv(\"figsharedailyrain/combined_data.csv\", chunksize=10_000_000):\n",
+    "    counts = counts.add(chunk[\"model\"].value_counts(), fill_value=0)\n",
+    "print(counts.astype(int))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "prescription-church",
+   "id": "innovative-violin",
+   "metadata": {},
+   "source": [
+    "### 5.1.2 DASK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "comparative-romantic",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "combined_data       54385075\n",
+      "MPI-ESM1-2-HR        5154240\n",
+      "TaiESM1              3541230\n",
+      "CMCC-CM2-HR4         3541230\n",
+      "CMCC-CM2-SR5         3541230\n",
+      "CMCC-ESM2            3541230\n",
+      "NorESM2-MM           3541230\n",
+      "SAM0-UNICON          3541153\n",
+      "FGOALS-f3-L          3219300\n",
+      "GFDL-CM4             3219300\n",
+      "GFDL-ESM4            3219300\n",
+      "EC-Earth3-Veg-LR     3037320\n",
+      "MRI-ESM2-0           3037320\n",
+      "BCC-CSM2-MR          3035340\n",
+      "MIROC6               2070900\n",
+      "ACCESS-CM2           1932840\n",
+      "ACCESS-ESM1-5        1610700\n",
+      "INM-CM5-0            1609650\n",
+      "INM-CM4-8            1609650\n",
+      "KIOST-ESM            1287720\n",
+      "FGOALS-g3            1287720\n",
+      "MPI-ESM-1-2-HAM       966420\n",
+      "MPI-ESM1-2-LR         966420\n",
+      "NESM3                 966420\n",
+      "AWI-ESM-1-1-LR        966420\n",
+      "NorESM2-LM            919800\n",
+      "CanESM5               551880\n",
+      "BCC-ESM1              551880\n",
+      "Name: model, dtype: int64\n",
+      "peak memory: 2396.77 MiB, increment: 1411.14 MiB\n",
+      "CPU times: user 2min 31s, sys: 12 s, total: 2min 43s\n",
+      "Wall time: 57.4 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "%%memit\n",
+    "# dask way\n",
+    "# Here again I am using dask to read that csv file. \n",
+    "# Remember internally its loading chunks and doing it parallely.\n",
+    "# here see cpu time greater than wall time \n",
+    "ddf = dd.read_csv(\"figsharedailyrain/combined_data.csv\")\n",
+    "print(ddf[\"model\"].value_counts().compute())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "olympic-equilibrium",
+   "metadata": {},
+   "source": [
+    "### 5.2 Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "opposite-tractor",
+   "metadata": {},
+   "source": [
+    "* The first approach loads the combined csv file in chuncks of `10_000_000` and serially performs EDA of counting models\n",
+    "* The second approach using dask internally loads in chunks and doing performs eda parallely in an optimized way.\n",
+    "* The wall time of second approach using dask is better than the first approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "renewable-singles",
    "metadata": {},
    "source": [
     "## 6. Perform a simple EDA in R\n",
@@ -456,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assisted-miller",
+   "id": "thorough-romania",
    "metadata": {},
    "source": [
     "### Reasons to choose **feather**\n",
@@ -472,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "standing-accent",
+   "id": "conscious-determination",
    "metadata": {},
    "source": [
     "### 6.1 Use Feather to transfer the dataframe from Python to R "
@@ -481,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "czech-flashing",
+   "id": "super-possession",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "maritime-latest",
+   "id": "liable-simulation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "framed-audit",
+   "id": "burning-hotel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "featured-board",
+   "id": "north-current",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +468,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "basic-carry",
+   "id": "complete-seeker",
    "metadata": {},
    "source": [
     "### 6.2 Perform a simple EDA in R"
@@ -542,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "finished-driving",
+   "id": "indoor-significance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "several-effectiveness",
+   "id": "korean-liechtenstein",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "freelance-banks",
+   "id": "favorite-islam",
    "metadata": {},
    "source": [
     "### Discussion\n",
