--- a/notebooks/project_notebook.ipynb
+++ b/notebooks/project_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "danish-trail",
+   "id": "adverse-survivor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "union-amplifier",
+   "id": "revised-separate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unnecessary-answer",
+   "id": "further-satin",
    "metadata": {},
    "source": [
     "## 3. Downloading the data"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "indoor-ratio",
+   "id": "photographic-cleaning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "confused-london",
+   "id": "involved-comparison",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "trying-gilbert",
+   "id": "clean-packaging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "palestinian-import",
+   "id": "capable-breathing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "composed-surname",
+   "id": "extraordinary-neighbor",
    "metadata": {},
    "source": [
     "## 4. Combining data CSVs"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "convenient-congress",
+   "id": "fewer-venice",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "protecting-peninsula",
+   "id": "french-location",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "annual-fairy",
+   "id": "needed-endorsement",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "illegal-bench",
+   "id": "prime-pound",
    "metadata": {},
    "source": [
     "## 5. Load the combined CSV to memory and perform a simple EDA"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hidden-universal",
+   "id": "vocal-parks",
    "metadata": {},
    "source": [
     "### 5.1.1 Loading in chunks"
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "enclosed-perfume",
+   "id": "structural-dealer",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "innovative-violin",
+   "id": "palestinian-february",
    "metadata": {},
    "source": [
     "### 5.1.2 DASK"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "comparative-romantic",
+   "id": "viral-klein",
    "metadata": {},
    "outputs": [
     {
@@ -349,17 +349,13 @@
    "source": [
     "%%time\n",
     "%%memit\n",
-    "# dask way\n",
-    "# Here again I am using dask to read that csv file. \n",
-    "# Remember internally its loading chunks and doing it parallely.\n",
-    "# here see cpu time greater than wall time \n",
     "ddf = dd.read_csv(\"figsharedailyrain/combined_data.csv\")\n",
     "print(ddf[\"model\"].value_counts().compute())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-equilibrium",
+   "id": "loving-utility",
    "metadata": {},
    "source": [
     "### 5.2 Description"
@@ -367,17 +363,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposite-tractor",
+   "id": "sealed-aerospace",
    "metadata": {},
    "source": [
+    "* We investigated two approaches,first using chunks and second using dask.\n",
     "* The first approach loads the combined csv file in chuncks of `10_000_000` and serially performs EDA of counting models\n",
-    "* The second approach using dask internally loads in chunks and doing performs eda parallely in an optimized way.\n",
+    "* The second approach using dask internally loads in chunks and performs eda parallely in an optimized way.\n",
+    "* The memory usage in both the first and second approach is similar. \n",
+    "* The CPU time is higher in the dask approach as compared to first approach. Also there is higher difference between CPU time and Wall time in dask than first approach  \n",
     "* The wall time of second approach using dask is better than the first approach"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "renewable-singles",
+   "id": "recreational-legislation",
    "metadata": {},
    "source": [
     "## 6. Perform a simple EDA in R\n",
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thorough-romania",
+   "id": "polyphonic-namibia",
    "metadata": {},
    "source": [
     "### Reasons to choose **feather**\n",
@@ -407,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conscious-determination",
+   "id": "mediterranean-klein",
    "metadata": {},
    "source": [
     "### 6.1 Use Feather to transfer the dataframe from Python to R "
@@ -416,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "super-possession",
+   "id": "recent-ready",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "liable-simulation",
+   "id": "cultural-techno",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "burning-hotel",
+   "id": "closing-watershed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "north-current",
+   "id": "bronze-london",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "complete-seeker",
+   "id": "assured-minute",
    "metadata": {},
    "source": [
     "### 6.2 Perform a simple EDA in R"
@@ -477,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indoor-significance",
+   "id": "talented-spread",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "korean-liechtenstein",
+   "id": "partial-breeding",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "favorite-islam",
+   "id": "crazy-definition",
    "metadata": {},
    "source": [
     "### Discussion\n",
