Add discussion and summary at the end

--- a/notebooks/project_notebook.ipynb
+++ b/notebooks/project_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "adverse-survivor",
+   "id": "efficient-anaheim",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "revised-separate",
+   "id": "subsequent-maine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "further-satin",
+   "id": "broken-crack",
    "metadata": {},
    "source": [
     "## 3. Downloading the data"
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "photographic-cleaning",
+   "id": "civilian-hamburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "involved-comparison",
+   "id": "emerging-perfume",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "clean-packaging",
+   "id": "major-drilling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "capable-breathing",
+   "id": "blocked-delicious",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extraordinary-neighbor",
+   "id": "religious-wisconsin",
    "metadata": {},
    "source": [
     "## 4. Combining data CSVs"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fewer-venice",
+   "id": "dominant-series",
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "french-location",
+   "id": "copyrighted-processor",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "needed-endorsement",
+   "id": "reasonable-establishment",
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "prime-pound",
+   "id": "civilian-tongue",
    "metadata": {},
    "source": [
     "## 5. Load the combined CSV to memory and perform a simple EDA"
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "vocal-parks",
+   "id": "veterinary-rendering",
    "metadata": {},
    "source": [
     "### 5.1.1 Loading in chunks"
@@ -242,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "structural-dealer",
+   "id": "interior-adjustment",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "palestinian-february",
+   "id": "pressed-technical",
    "metadata": {},
    "source": [
     "### 5.1.2 DASK"
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "viral-klein",
+   "id": "scenic-seattle",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loving-utility",
+   "id": "lasting-party",
    "metadata": {},
    "source": [
     "### 5.2 Description"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sealed-aerospace",
+   "id": "naughty-madrid",
    "metadata": {},
    "source": [
     "* We investigated two approaches,first using chunks and second using dask.\n",
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recreational-legislation",
+   "id": "therapeutic-columbus",
    "metadata": {},
    "source": [
     "## 6. Perform a simple EDA in R\n",
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "polyphonic-namibia",
+   "id": "brief-zimbabwe",
    "metadata": {},
    "source": [
     "### Reasons to choose **feather**\n",
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-klein",
+   "id": "julian-essence",
    "metadata": {},
    "source": [
     "### 6.1 Use Feather to transfer the dataframe from Python to R "
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "recent-ready",
+   "id": "addressed-inclusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cultural-techno",
+   "id": "improved-depth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closing-watershed",
+   "id": "parallel-framework",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bronze-london",
+   "id": "adapted-catholic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assured-minute",
+   "id": "external-privacy",
    "metadata": {},
    "source": [
     "### 6.2 Perform a simple EDA in R"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "talented-spread",
+   "id": "split-maintenance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "partial-breeding",
+   "id": "important-variety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,12 +512,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "crazy-definition",
+   "id": "respiratory-organ",
    "metadata": {},
    "source": [
-    "### Discussion\n",
+    "### 6.3 Discussion\n",
     "\n",
-    "TODO"
+    "There is no difference in terms of the counts for models between the EDA results using Python and R. When comparing the running time, it seems like using R is faster than the speed performed using Python. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "smaller-husband",
+   "metadata": {},
+   "source": [
+    "### Summary\n",
+    "\n",
+    "There are several challenges the team faced when dealing with large data sets. We can only perform limited and simple EDA with a local machine since large-scale data is very costive to visualize and calculate using complex matrics and evaluation. It is a bit frustrating to run every cell in the Jupyter notebook in our local machine as it will take a lot of time and might be stuck for a while. Besides, downloading files and deleting them would not be efficient enough as a repeating process to trigger the whole data processing.   "
    ]
   }
  ],
