--- a/notebooks/project_notebook.ipynb
+++ b/notebooks/project_notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "efficient-anaheim",
+   "id": "silver-renaissance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,10 +21,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "subsequent-maine",
+   "execution_count": null,
+   "id": "applicable-department",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "R[write to console]: Error: cons memory exhausted (limit reached?)\n",
+      "\n",
+      "R[write to console]: Error: no more error handlers available (recursive errors?); invoking 'abort' restart\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Jupyter Lab cell extensions\n",
     "%load_ext rpy2.ipython \n",
@@ -33,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broken-crack",
+   "id": "nearby-batch",
    "metadata": {},
    "source": [
     "## 3. Downloading the data"
@@ -42,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "civilian-hamburg",
+   "id": "distributed-elephant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "emerging-perfume",
+   "id": "standing-yield",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "major-drilling",
+   "id": "consecutive-preservation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "blocked-delicious",
+   "id": "injured-intro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,27 +149,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "religious-wisconsin",
+   "id": "hearing-claim",
    "metadata": {},
    "source": [
     "## 4. Combining data CSVs"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "dominant-series",
+   "cell_type": "markdown",
+   "id": "refined-aberdeen",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The memory_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext memory_profiler\n"
-     ]
-    }
-   ],
+   "source": [
+    "### 4.1 & 4.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "pacific-metadata",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%load_ext memory_profiler"
    ]
@@ -166,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "copyrighted-processor",
+   "id": "generous-custody",
    "metadata": {},
    "outputs": [
     {
@@ -194,38 +204,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "reasonable-establishment",
+   "execution_count": null,
+   "id": "strategic-cincinnati",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "peak memory: 152.25 MiB, increment: 0.12 MiB\n",
-      "CPU times: user 9min 6s, sys: 16 s, total: 9min 22s\n",
-      "Wall time: 9min 26s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%time\n",
-    "%memit\n",
-    "#Chirag's computer (Linux OS)\n",
-    "use_cols = [\"time\", \"lat_min\", \"lat_max\", \"lon_min\", \"lon_max\", \"rain (mm/day)\"]\n",
-    "files = glob.glob('figsharedailyrain/*.csv')\n",
-    "files[:] = [x for x in files if \"observed\" not in x]\n",
-    "df = pd.DataFrame(columns=use_cols)\n",
-    "df = pd.concat((pd.read_csv(file, index_col=0, usecols=use_cols)\n",
-    "                .assign(model=re.findall(r'[^\\/|\\\\]+(?=\\.)', file.replace('_daily_rainfall_NSW', ''))[0])\n",
-    "                for file in files)\n",
-    "              )  \n",
-    "df.to_csv(\"figsharedailyrain/combined_data.csv\")"
+    "%%sh\n",
+    "du -sh figsharerainfall/combined_data.csv"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "civilian-tongue",
+   "id": "convinced-depression",
+   "metadata": {},
+   "source": [
+    "### 4.3 Compare run times and memory usages on different machines\n",
+    "All team members ran the above cell and recorded their memory usage and run time, see results below.  Note only `Wall time` is recorded below as `CPU time` was not available for all team members. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "roman-doctor",
+   "metadata": {},
+   "source": [
+    "| User | Operating System | Memory | Time |\n",
+    "|------|--------|--------|------|\n",
+    "|Chirag| Ubuntu | 152.25 MiB, increment: 0.12 MiB| Wall  time: 9mins 26s|\n",
+    "|Elanor| Windows| 91.42 MiB, increment: 0.28 MiB| Wall time: 6min 17s|\n",
+    "| Hazel| Windows| 150.96MiB, increment: 0.06 MiB| Wall time: 6min 8s |\n",
+    "| Siqi | MacOS  | 92.05 MiB, increment: 0.28 MiB| Wall time: 7min 40s|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "parental-mystery",
+   "metadata": {},
+   "source": [
+    "When combining CSV files, the team had range of memory usage of 92-152 MiB, and a range of run time of 6-9 mins across 3 different operating systems.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "advised-ground",
    "metadata": {},
    "source": [
     "## 5. Load the combined CSV to memory and perform a simple EDA"
@@ -233,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-rendering",
+   "id": "natural-desperate",
    "metadata": {},
    "source": [
     "### 5.1.1 Loading in chunks"
@@ -242,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "interior-adjustment",
+   "id": "scheduled-coordinate",
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "pressed-technical",
+   "id": "first-sharp",
    "metadata": {},
    "source": [
     "### 5.1.2 DASK"
@@ -304,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "scenic-seattle",
+   "id": "invalid-senate",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lasting-party",
+   "id": "floating-worse",
    "metadata": {},
    "source": [
     "### 5.2 Description"
@@ -363,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naughty-madrid",
+   "id": "inclusive-today",
    "metadata": {},
    "source": [
     "* We investigated two approaches,first using chunks and second using dask.\n",
@@ -376,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "therapeutic-columbus",
+   "id": "closed-subject",
    "metadata": {},
    "source": [
     "## 6. Perform a simple EDA in R\n",
@@ -390,7 +410,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brief-zimbabwe",
+   "id": "activated-heart",
    "metadata": {},
    "source": [
     "### Reasons to choose **feather**\n",
@@ -406,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "julian-essence",
+   "id": "tough-variation",
    "metadata": {},
    "source": [
     "### 6.1 Use Feather to transfer the dataframe from Python to R "
@@ -415,7 +435,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "addressed-inclusion",
+   "id": "southeast-legend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "improved-depth",
+   "id": "committed-accident",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parallel-framework",
+   "id": "latest-montreal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adapted-catholic",
+   "id": "sustainable-taste",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "external-privacy",
+   "id": "green-craps",
    "metadata": {},
    "source": [
     "### 6.2 Perform a simple EDA in R"
@@ -476,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "split-maintenance",
+   "id": "tribal-fisher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "important-variety",
+   "id": "afraid-chart",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "respiratory-organ",
+   "id": "religious-panic",
    "metadata": {},
    "source": [
     "### 6.3 Discussion\n",
@@ -522,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "smaller-husband",
+   "id": "manufactured-lease",
    "metadata": {},
    "source": [
     "### Summary\n",
@@ -547,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
